Change image names, add some text changes to gallery

--- a/version-2/gallery.html
+++ b/version-2/gallery.html
@@ -9,229 +9,174 @@
   <div class="gallery-wrap">
     <h1>gallery of osiris</h1>
       <div class="card">
-        <img src="images/IMG_01.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/01.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_02.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/02.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_03.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/03.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_04.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/04.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_05.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/05.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_06.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/06.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_07.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/07.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_08.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/08.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_09.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/09.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_10.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/10.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_11.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/11.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_12.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/12.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_13.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/13.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_14.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/14.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_15.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/15.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_16.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/16.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_17.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/17.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_18.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/18.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_19.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/19.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_20.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/20.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_21.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/21.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_22.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/22.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_23.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/23.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_24.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/24.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_25.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/25.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_26.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/26.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_27.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/27.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_28.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/28.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_29.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/29.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_30.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/30.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_31.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/31.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_32.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/32.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_33.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/33.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_34.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/34.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_35.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/35.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_36.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/36.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_37.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/37.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_38.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/38.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_39.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/39.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_40.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/40.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_41.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/41.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_42.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/42.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_43.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/43.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_44.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/44.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_45.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/45.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_46.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/46.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_47.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/47.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_48.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/48.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_49.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/49.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_50.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/50.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_51.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/51.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_52.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/52.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_53.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/53.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_54.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/54.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_55.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/55.jpg">
       </div>
       <div class="card">
-        <img src="images/IMG_56.JPG">
-        <p class="details"><span class="title">Title goes here</span> | extra details go here</p>
+        <img src="images/56.jpg">
       </div>
+      <h5>TEXT GOES HERE</h5>
     <div class="clearfix"></div>
   </div>
   <div id="footer">
