--- a/version-2/masks.html
+++ b/version-2/masks.html
@@ -3,17 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="osiris_stylesheet.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="osiris.js"></script>
   <title>m a s k s</title>
 </head>
 <body>
-  <div class="big-wrap">
+  <div class="mask-gallery">
     <h1>in the masks page</h1>
-    <div id="footer">
-      <a href="index.html">Home</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="masks.html" class="active">Masks</a>
-      <a href="about.html">About</a>
+    <div class="container">
+      <div class="row">
+        <div class="row">
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 1"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 2"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 3"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 4"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 5"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 6"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 8"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 9"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 10"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 11"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 12"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+        </div>
+      </div>
     </div>
+    <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">×</button>
+            <h3 class="modal-title">Heading</h3>
+          </div>
+          <div class="modal-body">
+            <h1>hello this is the body, yo</h1>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </div>
+  <div id="footer">
+    <a href="index.html">Home</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="masks.html" class="active">Masks</a>
+    <a href="about.html">About</a>
+  </div>
+</div>
 </body>
 </html>
