--- a/version-2/about.html
+++ b/version-2/about.html
@@ -7,18 +7,19 @@
   <title>a b o u t</title>
 </head>
 <body>
+  <!-- contained box of text -->
+  <div id="header">
+    <a href="index.html">Home</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="masks.html">Masks</a>
+    <a href="about.html" class="active">About</a>
+  </div>
   <div class="big-wrap">
     <div class="contact-details">
       <h1>peter cochrane</h1>
       <p><i class="fa fa-envelope-o"></i> &nbsp; <a href="mailto:pescochrane@gmail.com" target="_top"> pescochrane@gmail.com</a></p>
       <p><i class="fa fa-instagram"></i> &nbsp; <a href="https://instagram.com/pecoch/">pecoch</a></p>
       <p><i class="fa fa-desktop"></i> &nbsp; <a href="http://www.petercochrane.us/">www.petercochrane.us</a></p>
-    </div>
-    <div id="footer">
-      <a href="index.html">Home</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="masks.html">Masks</a>
-      <a href="about.html" class="active">About</a>
     </div>
   </div>
 </body>
