--- a/version-2/gallery.html
+++ b/version-2/gallery.html
@@ -6,8 +6,13 @@
   <title>g a l l e r y</title>
 </head>
 <body>
+  <div id="header">
+    <a href="index.html">Home</a>
+    <a href="gallery.html" class="active">Gallery</a>
+    <a href="masks.html">Masks</a>
+    <a href="about.html">About</a>
+  </div>
   <div class="gallery-wrap">
-    <h1>gallery of osiris</h1>
       <div class="card">
         <img src="images/01.jpg">
       </div>
@@ -178,12 +183,6 @@
       </div>
       <h5>TEXT GOES HERE</h5>
     <div class="clearfix"></div>
-  </div>
-  <div id="footer">
-    <a href="index.html">Home</a>
-    <a href="gallery.html" class="active">Gallery</a>
-    <a href="masks.html">Masks</a>
-    <a href="about.html">About</a>
   </div>
 </body>
 </html>
