--- a/version-2/index.html
+++ b/version-2/index.html
@@ -8,6 +8,12 @@
   <script src="osiris.js"></script>
 </head>
 <body>
+  <div id="header">
+    <a href="index.html" class="active">Home</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="masks.html">Masks</a>
+    <a href="about.html">About</a>
+  </div>
   <div class="big-wrap">
     <div class="wrapper">
       <div class="panel" data-id="IMG_01"></div>
@@ -68,12 +74,6 @@
       <div class="panel" data-id="IMG_56"></div>
     </div>
     <div class="clearfix"></div>
-  </div>
-  <div id="footer">
-    <a href="index.html" class="active">Home</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="masks.html">Masks</a>
-    <a href="about.html">About</a>
   </div>
 </body>
 </html>
