--- a/version-2/masks.html
+++ b/version-2/masks.html
@@ -4,50 +4,88 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="osiris_stylesheet.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-
-  <!-- Optional theme -->
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
-
-  <!-- Latest compiled and minified JavaScript -->
   <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="osiris.js"></script>
   <title>m a s k s</title>
 </head>
 <body>
+  <!-- link fonts are too small -->
+  <div id="header">
+    <a href="index.html">Home</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="masks.html" class="active">Masks</a>
+    <a href="about.html">About</a>
+  </div>
   <div class="mask-gallery">
-    <h1>in the masks page</h1>
     <div class="container">
       <div class="row">
         <div class="row">
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 1"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 2"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 3"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 4"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 5"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 6"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 8"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 9"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 10"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 11"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 12"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="http://i.imgur.com/feRznaW.jpg?1" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 1"><img src="images/01.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 2"><img src="images/02.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 3"><img src="images/03.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 4"><img src="images/04.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 5"><img src="images/05.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 6"><img src="images/06.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 8"><img src="images/07.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 9"><img src="images/08.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 10"><img src="images/09.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 11"><img src="images/10.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 12"><img src="images/11.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/12.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/13.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/14.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/15.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/16.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/17.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/18.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/19.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/20.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/21.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/22.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/23.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/24.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/25.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/26.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/27.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/28.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/29.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/30.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/31.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/32.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/33.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/34.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/35.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/36.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/37.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/38.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/39.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/40.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/41.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/42.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/43.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/44.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/45.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/46.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/47.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/48.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/49.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/50.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/51.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/52.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/53.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/54.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/55.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="images/56.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+
         </div>
       </div>
     </div>
     <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">×</button>
-            <h3 class="modal-title">Heading</h3>
-          </div>
           <div class="modal-body">
-            <h1>hello this is the body, yo</h1>
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
@@ -55,12 +93,7 @@
 
 
   </div>
-  <div id="footer">
-    <a href="index.html">Home</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="masks.html" class="active">Masks</a>
-    <a href="about.html">About</a>
-  </div>
+
 </div>
 </body>
 </html>
