Change the Masks name to Artworks. Different nav bar colors and links per page.

--- a/version-2/about.html
+++ b/version-2/about.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <!-- contained box of text -->
-  <div id="header">
+  <div class = "header" id="about-header">
     <a href="index.html">Home</a>
     <a href="gallery.html">Gallery</a>
-    <a href="masks.html">Masks</a>
+    <a href="artworks.html">Artworks</a>
     <a href="about.html" class="active">About</a>
   </div>
   <div class="big-wrap">
