--- a/version-2/artworks.html
+++ b/version-2/artworks.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
   <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="osiris.js"></script>
-  <title>m a s k s</title>
+  <title>a r t w o r k s</title>
 </head>
 <body>
   <!-- link fonts are too small -->
-  <div id="header">
+  <div class="header" id="artworks-header">
     <a href="index.html">Home</a>
     <a href="gallery.html">Gallery</a>
-    <a href="masks.html" class="active">Masks</a>
+    <a href="artworks.html" class="active">Artworks</a>
     <a href="about.html">About</a>
   </div>
   <div class="mask-gallery">
