--- a/version-2/gallery.html
+++ b/version-2/gallery.html
@@ -6,10 +6,10 @@
   <title>g a l l e r y</title>
 </head>
 <body>
-  <div id="header">
+  <div class="header" id="gallery-header">
     <a href="index.html">Home</a>
     <a href="gallery.html" class="active">Gallery</a>
-    <a href="masks.html">Masks</a>
+    <a href="artworks.html">Artworks</a>
     <a href="about.html">About</a>
   </div>
   <div class="gallery-wrap">
