--- a/version-2/index.html
+++ b/version-2/index.html
@@ -8,10 +8,10 @@
   <script src="osiris.js"></script>
 </head>
 <body>
-  <div id="header">
+  <div class="header" id="home-header">
     <a href="index.html" class="active">Home</a>
     <a href="gallery.html">Gallery</a>
-    <a href="masks.html">Masks</a>
+    <a href="artworks.html">Artworks</a>
     <a href="about.html">About</a>
   </div>
   <div class="big-wrap">
