Add two new pages for Artworks. Change the nav bar with new pages on hover. Add social media footer.

--- a/version-2/gallery.html
+++ b/version-2/gallery.html
@@ -7,10 +7,17 @@
 </head>
 <body>
   <div class="header" id="gallery-header">
-    <a href="index.html">Home</a>
-    <a href="gallery.html" class="active">Gallery</a>
-    <a href="artworks.html">Artworks</a>
-    <a href="about.html">About</a>
+    <ul class="nav-bar-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="gallery.html" class="active">Gallery</a></li>
+      <li><a href="artworks.html">Artworks</a>
+        <ul class="dropdown">
+          <li><a href="masks.html">Masks</a></li>
+          <li><a href="flowers.html">Flowers</a></li>
+        </ul>
+      </li>
+      <li><a href="about.html">About</a></li>
+    </ul>
   </div>
   <div class="gallery-wrap">
       <div class="card">
