--- a/version-2/about.html
+++ b/version-2/about.html
@@ -9,18 +9,30 @@
 <body>
   <!-- contained box of text -->
   <div class = "header" id="about-header">
-    <a href="index.html">Home</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="artworks.html">Artworks</a>
-    <a href="about.html" class="active">About</a>
+    <ul class="nav-bar-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="artworks.html">Artworks</a>
+        <ul class="dropdown dropdown-black">
+          <li><a href="masks.html">Masks</a></li>
+          <li><a href="flowers.html">Flowers</a></li>
+        </ul>
+      </li>
+      <li><a href="about.html" class="active">About</a></li>
+    </ul>
   </div>
-  <div class="big-wrap">
+  <div class="contact-container">
     <div class="contact-details">
-      <h1>peter cochrane</h1>
-      <p><i class="fa fa-envelope-o"></i> &nbsp; <a href="mailto:pescochrane@gmail.com" target="_top"> pescochrane@gmail.com</a></p>
-      <p><i class="fa fa-instagram"></i> &nbsp; <a href="https://instagram.com/pecoch/">pecoch</a></p>
-      <p><i class="fa fa-desktop"></i> &nbsp; <a href="http://www.petercochrane.us/">www.petercochrane.us</a></p>
+
     </div>
+  </div>
+  <div class="footer">
+    <ul>
+      <li><a href="mailto:pescochrane@gmail.com" target="_top"> <i class="fa fa-envelope-o fa-inverse"></i></a></li>
+      <li><a href="https://instagram.com/pecoch/"><i class="fa fa-tumblr fa-inverse"></i></a></li>
+      <li><a href="http://www.petercochrane.us/"><i class="fa fa-desktop fa-inverse"></i></a></li>
+      <li><a href="http://www.petercochrane.us/"><i class="fa fa-desktop fa-inverse"></i></a></li>
+    </ul>
   </div>
 </body>
 </html>
