--- a/version-2/index.html
+++ b/version-2/index.html
@@ -2,17 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>YOOHOO PETER!!</title>
+  <title>peter cochrane</title>
   <link rel="stylesheet" href="osiris_stylesheet.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="osiris.js"></script>
 </head>
 <body>
   <div class="header" id="home-header">
-    <a href="index.html" class="active">Home</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="artworks.html">Artworks</a>
-    <a href="about.html">About</a>
+    <ul class="nav-bar-links">
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="artworks.html">Artworks</a>
+        <ul class="dropdown dropdown-black">
+          <li><a href="masks.html">Masks</a></li>
+          <li><a href="flowers.html">Flowers</a></li>
+        </ul>
+      </li>
+      <li><a href="about.html">About</a></li>
+    </ul>
   </div>
   <div class="big-wrap">
     <div class="wrapper">
