Index page has two panels

--- a/version-2/index.html
+++ b/version-2/index.html
@@ -22,7 +22,7 @@
     </ul>
   </div>
   <div class="big-wrap">
-    <div class="wrapper">
+    <div class="wrapper" id="top-level">
       <div class="panel" data-id="IMG_01"></div>
       <div class="panel" data-id="IMG_02"></div>
       <div class="panel" data-id="IMG_03"></div>
@@ -51,6 +51,8 @@
       <div class="panel" data-id="IMG_26"></div>
       <div class="panel" data-id="IMG_27"></div>
       <div class="panel" data-id="IMG_28"></div>
+    </div>
+    <div class="wrapper" id="bottom-level">
       <div class="panel" data-id="IMG_29"></div>
       <div class="panel" data-id="IMG_30"></div>
       <div class="panel" data-id="IMG_31"></div>
