--- a/version-2/about.html
+++ b/version-2/about.html
@@ -9,7 +9,6 @@
   <title>a b o u t</title>
 </head>
 <body>
-  <!-- contained box of text -->
   <div class = "header" id="about-header">
     <ul class="nav-bar-links">
       <li><a href="index.html">Home</a></li>
@@ -25,17 +24,28 @@
   </div>
   <div class="contact-container">
     <div class="contact-details">
+      <h1>Peter Cochrane</h1>
+      <h1>Osiris</h1>
+      <p class="first-p">In its most literal iteration, death signifies the terminus of the body and mind. The lungs cease to expand and contract, the heart stops its rhythmic pumping, the electricity flowing through the brain slows its course, and, one by one, the organs are relieved of their duties. The notion of life after death has set both the religious and the scientific on hunts through historical tomes and mad experiments over the span of recorded human history. But what of death within life? What of trauma that bends reality into the unfathomable and its subsequent recovery, the meditative piling of one stone atop another to rebuild a single pillar? Cannot significant events or extended periods of pain and harm be isolated, considered, held, loved, and placed back into the greater whole? I wonder if in making internal wounds external we offer ourselves the chance to accept and heal—to lose, to nurture, to grieve.</p>
+      <p>Osiris is a tribute to trauma and recovery in all its iterations. As an installation, it is comprised of 28 death masks, each representing one year of life lived through the creation of this body of work. Each porcelain mask is broken to reflect various hardships, leading up to a massive calamity at the age of 27. To honor these events and to learn to cherish the healing wounds as moments of strength, Kintsugi, a technique used by Japanese ceramicists to repair objects with gold lacquer, was employed. Brilliant scars formed at the junctures of shattered face, each line representing the binding nature of understanding through suffering. Initially exhibited at Incline Gallery in San Francisco, hundreds of hanging lilies bloomed and died over the course of the show; an incarnation of the lifecycle and an offering of beauty for the spirit of transformation.</p>
 
-    </div>
+      <div class="image">
+        <img src="images/osiris_mold.jpg" class="osiris-pic" alt="Master mold">
+      </div>
+
+    <p>Peter Cochrane is an artist, author, and editor. He produced the photography publication HOLLOWAY featuring artists who were educated in state-funded institutions. His work has appeared in BOMB magazine, Headmaster magazine, The San Francisco Chronicle, and more. He has created books that have traveled to the Vancouver Art/Book Fair, the Los Angeles Art Book Fair, multiple Bay Area book fairs, and the Room&Book fair at the ICA in London. He has been featured in numerous exhibitions in the Bay Area including at the de Young museum. He is the managing editor of SFAQ / NYAQ / AQ—the only printed, international, and free publication dedicated to arts and culture. </p>
+
   </div>
-  <div class="footer">
-    <ul>
-      <li><a href="mailto:pescochrane@gmail.com" class="tooltip"> <span>pescochrane@gmail.com</span><i class="fa fa-lg fa-envelope-o fa-inverse"></i></a></li>
-      <li><a href="https://pecoch.tumblr.com/" class="tooltip"><span>pecoch</span><i class="fa fa-lg fa-tumblr fa-inverse"></i></a></li>
-      <li><a href="https://instagram.com/pecoch/" class="tooltip"><span>@pecoch</span><i class="fa fa-lg fa-instagram fa-inverse"></i></a></li>
-      <li><a href="http://www.petercochrane.us/" class="tooltip"><span>www.petercochrane.us</span><i class="fa fa-lg fa-desktop fa-inverse"></i></a></li>
-      <li><a href="http://www.petercochrane.xyz/" class="tooltip"><span>www.petercochrane.xyz</span><i class="fa fa-lg fa-desktop fa-inverse"></i></a></li>
-    </ul>
-  </div>
+</div>
+<div class="footer">
+  <span>&copy; Peter Cochrane 2015. All works are available for sale. Photographs of the ceramics and flowers may also be purchased.</span>
+  <ul>
+    <li><a href="mailto:pescochrane@gmail.com" class="tooltip"> <span>pescochrane@gmail.com</span><i class="fa fa-lg fa-envelope-o fa-inverse"></i></a></li>
+    <li><a href="https://pecoch.tumblr.com/" class="tooltip"><span>pecoch</span><i class="fa fa-lg fa-tumblr fa-inverse"></i></a></li>
+    <li><a href="https://instagram.com/pecoch/" class="tooltip"><span>@pecoch</span><i class="fa fa-lg fa-instagram fa-inverse"></i></a></li>
+    <li><a href="http://www.petercochrane.us/" class="tooltip"><span>www.petercochrane.us</span><i class="fa fa-lg fa-desktop fa-inverse"></i></a></li>
+    <li><a href="http://www.petercochrane.xyz/" class="tooltip"><span>www.petercochrane.xyz</span><i class="fa fa-lg fa-desktop fa-inverse"></i></a></li>
+  </ul>
+</div>
 </body>
 </html>
