--- a/version-2/masks.html
+++ b/version-2/masks.html
@@ -28,34 +28,34 @@
     <div class="container">
       <div class="row">
         <div class="row">
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/01.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/02.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/03.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/04.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/05.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/06.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/07.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/08.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/09.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/10.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/11.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/12.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/13.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/14.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/15.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/16.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/17.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/18.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/19.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/20.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/21.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/22.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/23.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/24.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/25.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/26.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/27.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
-          <div class="col-lg-3 col-sm-4 col-6"><a href="#"><img src="images/28.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/01.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/02.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/03.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/04.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/05.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/06.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/07.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/08.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/09.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/10.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/11.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/12.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/13.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/14.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/15.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/16.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/17.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/18.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/19.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/20.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/21.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/22.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/23.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/24.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/25.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/26.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/27.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/28.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
         </div>
       </div>
     </div>
