Add responsive fixes for drop down menu; add text for gallery

--- a/version-2/gallery.html
+++ b/version-2/gallery.html
@@ -68,7 +68,7 @@
     <div class="clearfix"></div>
   </div>
   <div class="exhibit">
-    <span>incline gallery detail goes here</span>
+    <span>Installation view of <em>Osiris</em> at Incline Gallery, San Francisco.</span>
   </div>
 </body>
 </html>
