Fix the center alignment of tooltips by specifying the span. Fix the white borders around thumbnails on mobile view.

--- a/version-2/about.html
+++ b/version-2/about.html
@@ -38,10 +38,10 @@
   </div>
 </div>
 <div class="footer">
-  <span>&copy; Peter Cochrane 2015. All works are available for sale. Photographs of the ceramics and flowers may also be purchased.</span>
+  <span class="footer-deets">&copy; Peter Cochrane 2015. All works are available for sale. Photographs of the ceramics and flowers may also be purchased.</span>
   <ul>
     <li><a href="mailto:pescochrane@gmail.com" class="tooltip"> <span>pescochrane@gmail.com</span><i class="fa fa-lg fa-envelope-o fa-inverse"></i></a></li>
-    <li><a href="https://pecoch.tumblr.com/" class="tooltip"><span>pecoch</span><i class="fa fa-lg fa-tumblr fa-inverse"></i></a></li>
+    <li><a href="http://pecoch.tumblr.com/" class="tooltip"><span>pecoch</span><i class="fa fa-lg fa-tumblr fa-inverse"></i></a></li>
     <li><a href="https://instagram.com/pecoch/" class="tooltip"><span>@pecoch</span><i class="fa fa-lg fa-instagram fa-inverse"></i></a></li>
     <li><a href="http://www.petercochrane.us/" class="tooltip"><span>www.petercochrane.us</span><i class="fa fa-lg fa-desktop fa-inverse"></i></a></li>
     <li><a href="http://www.petercochrane.xyz/" class="tooltip"><span>www.petercochrane.xyz</span><i class="fa fa-lg fa-desktop fa-inverse"></i></a></li>
