--- a/version-2/masks.html
+++ b/version-2/masks.html
@@ -25,7 +25,7 @@
     </ul>
   </div>
   <div class="mask-gallery">
-    <div class="container">
+    <div class="container-box">
       <div class="row">
         <div class="row">
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/01.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
