--- a/version-2/artworks.html
+++ b/version-2/artworks.html
@@ -25,7 +25,7 @@
     </ul>
   </div>
   <div class="mask-gallery">
-    <div class="container">
+    <div class="container-box">
       <div class="row">
         <div class="row">
           <div class="col-lg-3 col-sm-12 col-md-6"><a href="#"><img src="images/01.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
@@ -88,9 +88,9 @@
       </div>
     </div>
     <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
-      <div class="modal-dialog">
+      <div class="modal-dialog col-sm-12" style="left: 0;width: auto !important;">
         <div class="modal-content">
-          <div class="modal-body">
+          <div class="modal-body" style="width: 40%; margin: 0 auto;">
           </div>
         </div>
       </div>
