--- a/version-2/masks.html
+++ b/version-2/masks.html
@@ -60,9 +60,9 @@
       </div>
     </div>
     <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
-      <div class="modal-dialog">
+      <div class="modal-dialog col-sm-12" style="left: 0;width: auto !important;">
         <div class="modal-content">
-          <div class="modal-body">
+          <div class="modal-body" style="width: 40%; margin: 0 auto;">
           </div>
         </div>
       </div>
