--- a/version-2/about.html
+++ b/version-2/about.html
@@ -11,15 +11,16 @@
 <body>
   <div class = "header" id="about-header">
     <ul class="nav-bar-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="artworks.html">Artworks</a>
+      <li class="nav-links"><a href="index.html">Home</a></li>
+      <li class="nav-links"><a href="gallery.html">Gallery</a></li>
+      <li class="nav-links"><a href="artworks.html">Artworks</a>
         <ul class="dropdown dropdown-black">
           <li><a href="masks.html">Masks</a></li>
           <li><a href="flowers.html">Flowers</a></li>
         </ul>
       </li>
-      <li><a href="about.html" class="active">About</a></li>
+      <li class="nav-links"><a href="about.html" class="active">About</a></li>
+      <li class="nav-links"><a href="contact.html">Contact</a></li>
     </ul>
   </div>
   <div class="contact-container">
