--- a/version-2/flowers.html
+++ b/version-2/flowers.html
@@ -13,15 +13,16 @@
 <body>
   <div class="header" id="artworks-header">
     <ul class="nav-bar-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="artworks.html" class="active">Artworks</a>
+      <li class="nav-links"><a href="index.html">Home</a></li>
+      <li class="nav-links"><a href="gallery.html">Gallery</a></li>
+      <li class="nav-links"><a href="artworks.html" class="active">Artworks</a>
         <ul class="dropdown dropdown-black">
           <li><a href="masks.html" class="active">Masks</a></li>
           <li><a href="flowers.html" class="active">Flowers</a></li>
         </ul>
       </li>
-      <li><a href="about.html">About</a></li>
+      <li class="nav-links"><a href="about.html">About</a></li>
+      <li class="nav-links"><a href="contact.html">Contact</a></li>
     </ul>
   </div>
   <div class="mask-gallery">
