--- a/version-2/gallery.html
+++ b/version-2/gallery.html
@@ -8,15 +8,16 @@
 <body>
   <div class="header" id="gallery-header">
     <ul class="nav-bar-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="gallery.html" class="active">Gallery</a></li>
-      <li><a href="artworks.html">Artworks</a>
+      <li class="nav-links"><a href="index.html">Home</a></li>
+      <li class="nav-links"><a href="gallery.html" class="active">Gallery</a></li>
+      <li class="nav-links"><a href="artworks.html">Artworks</a>
         <ul class="dropdown">
           <li><a href="masks.html">Masks</a></li>
           <li><a href="flowers.html">Flowers</a></li>
         </ul>
       </li>
-      <li><a href="about.html">About</a></li>
+      <li class="nav-links"><a href="about.html">About</a></li>
+      <li class="nav-links"><a href="contact.html">Contact</a></li>
     </ul>
   </div>
   <div class="gallery-wrap">
