--- a/version-2/contact.html
+++ b/version-2/contact.html
@@ -9,30 +9,30 @@
   <title>a b o u t</title>
 </head>
 <body>
-  <div class = "header" id="about-header">
+   <div class="header" id="gallery-header">
     <ul class="nav-bar-links">
       <li class="nav-links"><a href="index.html">Home</a></li>
-      <li class="nav-links"><a href="gallery.html">Gallery</a></li>
+      <li class="nav-links"><a href="gallery.html" class="active">Gallery</a></li>
       <li class="nav-links"><a href="artworks.html">Artworks</a>
-        <ul class="dropdown dropdown-black">
+        <ul class="dropdown">
           <li><a href="masks.html">Masks</a></li>
           <li><a href="flowers.html">Flowers</a></li>
         </ul>
       </li>
       <li class="nav-links"><a href="about.html">About</a></li>
-      <li class="nav-links"><a href="contact.html" class="active">Contact</a></li>
+      <li class="nav-links"><a href="contact.html">Contact</a></li>
     </ul>
   </div>
   <div class="contact-container">
     <div class="contact-details">
-      <h1>CONTACT PAGE</h1>
-      <p class="first-p">CONTACT PAGE</p>
+      <h1>Peter Cochrane</h1>
+      <p><em>For a list of available works and prices, please email <a href="mailto:pescochrane@gmail.com">pescochrane at gmail dot com</a>.</em></p>
 
-      <div class="image">
-        <img src="images/osiris_mold.jpg" class="osiris-pic" alt="Master mold">
-      </div>
+      <p class="first-p"><p>Peter Cochrane is an artist, author, and editor. He produced the photography publication <em>HOLLOWAY</em> featuring artists who were educated in state-funded institutions. His work has appeared in <em>BOMB</em> magazine, <em>Headmaster</em> magazine, <em>The San Francisco Chronicle</em>, and more. He has created books that have traveled to the Vancouver Art/Book Fair, the Los Angeles Art Book Fair, multiple Bay Area book fairs, and the Room&Book fair at the ICA in London. He has been featured in numerous exhibitions in the Bay Area including at the de Young museum. He is the managing editor of <em>SFAQ / NYAQ / AQ</em>—the only printed, international, and free publication dedicated to arts and culture. </p>
 
-    <p>CONTACT PAGE</p>
+      <p><a href="http://jessiewuwu.com/">Jessie Wu</a> made this vision come to life by writing the code.</p>
+
+      <p>Photographs by Peter Cochrane.</p>
 
   </div>
 </div>
