--- a/version-2/masks.html
+++ b/version-2/masks.html
@@ -37,6 +37,7 @@
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/06.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/07.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/08.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="clearfix"></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/09.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/10.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/11.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
@@ -49,10 +50,12 @@
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/18.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/19.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/20.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="clearfix"></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/21.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/22.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/23.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/24.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
+          <div class="clearfix"></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/25.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/26.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
           <div class="col-lg-3 col-sm-12 col-md-3"><a href="#"><img src="images/27.jpg" class="thumbnail img-responsive" data-toggle="modal" data-target="#myModal"></a></div>
